# Bitcoin-Tausch-Netzwerk

./: .gitignore  Cargo.toml  GITHUB_DESCRIPTION.md  MASTERPLAN.md  MATERPLAN.md  MIGRATION_LOG.md  README.md  STRUKTUR.md  package-lock.json  package.json  pnpm-lock.yaml
bitcoinSwap/: .eslintrc.json  .gitignore  ANMELDE-SYSTEM-ANLEITUNG.md  ANMELDE-TEST-SZENARIEN.md  DEPLOYMENT-ANLEITUNG.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-SUCCESS.md  ECHTE-NOSTR-INTEGRATION.md  EINLADUNGSLINK-ANLEITUNG.md  EINLADUNGSLINK-BEISPIEL.md  ERWEITERTE-FEATURES.md  FINAL-DEPLOYMENT-READY.md  GIT-PUSH-REQUIRED.md  GRUPPEN-ISOLATION-FIX.md  IMPLEMENTIERUNG-FERTIG.md  INDEXEDDB-DEPLOYMENT.md  LOGIN-SYSTEM-ÜBERSICHT.md  LOKALE-PERSISTENZ.md  NOSTR-ARCHITEKTUR.md  OPTIMIERUNGEN.md  PHASE1-SUMMARY.md  PHASE2-PROGRESS.md  RELAY-STRATEGIE-ANLEITUNG.md  SECRET-BUG-ANALYSE.md  SECRET-DEBUG-TEST.md  SECRET-VERHALTEN-ANALYSE.md  SICHERE-KONFIGURATION.md  TEST-WHITELIST-KONFIGURATION.md  VERCEL-DEPLOYMENT-GUIDE.md  VERCEL-FIX.md  VERCEL-PNPM-FIX.md  VEREINFACHUNG.md  WHITELIST-DEPLOYMENT.md  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json  vite.config.ts
docs/: DEMO-ACCOUNTS.md  GITHUB_PAGES_SETUP.md  README.md  account-generator.html  config.js  convert.html  dashboard.html  debug.js  index-old.html  index.html  interface-plan.md  login-demo.html  manifest.json  my-offers.html  npub-generator.html  package-lock.json  package.json  script.js  start.html
src/: anonymous_publisher.rs  main.rs  nip17_messenger.rs  nostr_client.rs  offer_manager.rs  relay_tester.rs  types.rs
(+77 files in other folders)
