[package]
name = "bitcoin-tausch-netzwerk"
version = "0.1.0"
edition = "2021"
description = "Anonymous Nostr-based Bitcoin exchange network - contact broker only"
license = "MIT"

[dependencies]
# Nostr protocol implementation
nostr-sdk = "0.33"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation for anonymous offers
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
